[package]
name = "mbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
clap = { version = "3.2.20", features = ["derive"] }
egui = { version = "0.19.0", features = ["default_fonts"] }
egui_glow = { version = "0.19.0", features = ["winit"] }
env_logger = "0.9.0"
glow = "0.11.2"
glutin = "0.29.1"
log = "0.4.17"
